remove base_solver, modify cfg args

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -63,6 +63,7 @@ train:
       cooldown: 0
       min_lr: 0
       eps: 1e-08
+    monitor: 'train-total_loss'  # metric to monitor (only for ReduceLROnPlateau)
 
 criterion:
   l1_loss:
