use database name for unified loader

--- a/configs/model_name.yaml
+++ b/configs/model_name.yaml
@@ -22,6 +22,7 @@ test:
   visualize_result: false
   
 data:
+  name: 'example_dataset'
   root: 'DATA_PATH_FOR_THIS_MODEL'
   batch_size: 10
   num_workers: 8
